# UC15_pipeline

./: .gitignore  .gitmodules  README.md  data_cleaning.tsv  dataset_preparation.sh  decompress_dataset.sh  pytorch_requirements.txt  requirements.txt
eddl_pipeline/: CMakeLists.txt  READ.distr  install_help.txt  lanza_256.sh  lanza_512.sh  slurm.sh
eddl_pipeline/ecvl-patch/: support_eddl.cpp
eddl_pipeline/scripts/: compile-cuda11.2.sh  compile.sh  compile2.sh  distr_train.sh  run_01.sh  run_18_01.sh  run_18_3a.sh  run_24_1.sh  run_24_2a.sh  run_24_3a.sh  run_24_3b.sh  run_256.sh  run_512.sh  run_test.sh  run_test2.sh  run_test_distr.sh  run_test_only.sh  run_test_only_distr.sh  train.sh  train_2.sh
eddl_pipeline/src/: CMakeLists.txt  train.cpp  train_distr.cpp
eddl_pipeline/src/models/: CMakeLists.txt  models.cpp  models.hpp
eddl_pipeline/src/pipeline/: CMakeLists.txt  augmentations.cpp  augmentations.hpp  data_generator.cpp  data_generator.hpp  test.cpp  test.hpp  training.cpp  training.hpp
eddl_pipeline/src/training/: augmentations.cpp
eddl_pipeline/src/utils/: CMakeLists.txt  utils.cpp  utils.hpp
pyeddl_pipeline/: convert_csv2yaml.py  data_cleaning.ipynb  data_exploration.ipynb  ecvl_yaml_visualization.ipynb  images_visualization.ipynb  prepare_ecvl_dataset.py  test.py  test_ecvl_dataset.py  train.py
pyeddl_pipeline/lib/: data_processing.py  image_processing.py  models.py  plot_utils.py  training.py
python/: data_exploration.ipynb  prepare_ecvl_dataset.py  test_ecvl_dataset.py  train.py
python/lib/: data_processing.py  image_processing.py  models.py  plot_utils.py  training.py
pytorch_pipeline/: train.py
pytorch_pipeline/lib/: data.py  models.py  training.py
