add_library(augmentations STATIC augmentations.hpp augmentations.cpp)
add_library(data_generator STATIC data_generator.hpp data_generator.cpp)
add_library(training STATIC training.hpp training.cpp)
add_library(test STATIC test.hpp test.cpp)
target_link_libraries(augmentations ECVL_CORE ECVL_EDDL)
target_link_libraries(data_generator ECVL_EDDL)
target_link_libraries(training EDDL::eddl ECVL_CORE ECVL_EDDL data_generator)
target_link_libraries(test EDDL::eddl ECVL_CORE ECVL_EDDL)
